[package]
name = "rustupolis_server"
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "A library for using space tuples in fog computing"
repository = "https://github.com/Maxbever/LIF_Server"
readme = "README.md"
keywords = ["tuple-space", "concurrent", "distributed"]
categories = ["data-structures"]

# For documentation of features see the `mio::features` module.
[features]
# By default Mio only provides a shell implementation.
default = []
# Enables the `Poll` and `Registry` types.
os-poll = []
# Enables `mio::net` module containing networking primitives.
net = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustupolis_server"
path = "src/lib.rs"
test = true
doctest = true

[dependencies]
mio = {version = "0.8", features = ["net","os-poll"]}
rustupolis = "0.0.2"
futures = "0.3.5"
log = "0.4.8"
error-chain = "0.12.2"
crossbeam = "0.8"

[[example]]
name = "multiple_server"
path = "examples/multiple_server/main.rs"

[[example]]
name = "client"
path = "examples/client/main.rs"

[[test]]
name = "test_server"
path = "tests/test_server.rs"